# ai-lectures

./: .gitattributes  .gitignore  .gitmodules
.devcontainer/: devcontainer.json  setup.sh
0-syllabus/: 1-python-basic-syllabus.md  3-machine-learning-basic-syllabus.md  4-deep-learning-basic-syllabus.md  5-computer-vision-syllabus.md  6-pytorch-syllabus.md
0_series/: 1-python-basic.md  2-data-analysis-python.md  2-data-analysis-with-python-syllabus.md  3-machine-learning-basic.md  4-deep-learning-basic-syllabus.md  4-deep-learning-basic.md  5-computer-vision-syllabus.md  5-computer-vision.md  6-pytorch-syllabus.md  7-nlp.md  8-math.md
0_syllabus/: 1-python-basic-series.md  1-python-basic-syllabus.md  1-python-basic.md  2-data-analysis-with-python-syllabus.md  3-machine-learning-basic-series.md  3-machine-learning-basic-syllabus.md  6-pytorch-syllabus.md
10_mlops/: 0-mlops.md  1-clearml-installation.md  2-clearml-data-versioning.md  3-clearml-experiments-tracking.md  4-clearml-model-deployment.md
10_pytorch/: 1_tensor.ipynb
11_math/: 0-math.md  1-vector-matrix.md  2-probability.md  3-statistics.md  4-mle-map.md  5-derivative.md  6-homework.md
12_pytorch/: 1-introduction.md  1-pytorch-introduction.md  2-dataset-dataloader.md  3-torchvision-torchtext-torchaudio.md  4-model.md  5-training-pipeline.md  6-pytorch-lightning.md  7-pytorch-deployment.md  (+1 more)
5_computer_vision/notebook/4-object-detection/brain_tumor_detection/yolov9_venv/: pyproject.toml
5_computer_vision/notebook/7-image-segmentation/carvana_image_masking/Pytorch-UNet_venv/: pyproject.toml
(+364 files in other folders)
